# api-comparer

./: .gitignore  README.md  compare.sh  docker-compose.yml  run.sh
db/: init.sql
golang/: README.md  app.go  go.mod  go.sum  routes.go  run.sh
python/: README.md  pyproject.toml  run.sh
python/api_comparer_python/: app.py  db.py  main.py
