[tool.poetry]
name = "api-comparer-python"
version = "0.1.0"
description = ""
authors = ["Sean Connelly <sconnel42@gmail.com>"]
readme = "README.md"
packages = [{include = "api_comparer_python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
